# AI-Resume-Analyzer

./: .gitignore  README.md  package.json  pnpm-lock.yaml  skills-lock.json  turbo.json
apps/api/: .env.example  README.md  main.py  package.json  pyproject.toml
apps/api/app/: __init__.py  main.py
apps/api/app/routers/: llm_config.py  resumes.py
apps/api/app/schemas/: health.py  llm_config.py  match.py  profile.py  resume.py
apps/api/app/services/: extractor.py  llm_client.py  matcher.py  pdf_parser.py  text_cleaner.py
apps/web/: eslint.config.js  package.json
apps/web/app/: layout.tsx  page.tsx
apps/web/components/: resume-analyzer-workspace.tsx
apps/web/components/resume-analyzer/: job-description-card.tsx  llm-config-card.tsx  match-card.tsx  profile-card.tsx  result-json-card.tsx  shared.tsx  text-card.tsx  upload-card.tsx  utils.ts  workspace-header.tsx
apps/web/lib/: api.ts
docs/: README.md  api-design.md  architecture.md  deployment.md  implementation-plan.md  mvp-scope.md  product-scope.md
